--- a/css/login.css
+++ b/css/login.css
@@ -14,18 +14,19 @@ body{
 }
 
 div{
+    background-color: red;
+    position: absolute;
     width: 35vw;
     height: 20vh;
-    margin-top: 40vh;
-    margin-left: 27.5vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
+    top: 40vh;
+    left: 16.25vw;
+
 }
 
 .container{
-    width: 35vw;
-    height: 5vh;
+
+    /*width: 35vw;*/
+    /*height: 5vh;*/
+
 
 }
