--- a/css/login.css
+++ b/css/login.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     position: relative;
-
 }
 
 body{
@@ -11,22 +10,33 @@ body{
     position: absolute;
     top: 0;
     left: 0;
+    margin: 0;
+    padding: 0;
 }
 
 div{
     background-color: red;
     position: absolute;
     width: 35vw;
-    height: 20vh;
+    height: 40vh;
     top: 40vh;
     left: 16.25vw;
+    maxgin: 0;
+    padding: 0;
 
+}
+
+div >input{
+    display:block;
 }
 
 .container{
 
     /*width: 35vw;*/
     /*height: 5vh;*/
-
+    position: relative;
+    margin: 0;
+    padding: 0;
+    left: 0;
 
 }
