--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,31 @@ body {
 	font-family: 'Alegreya Sans', sans-serif;
 	overflow-x: hidden;
 	margin: 0;
+	padding: 0;
 }
 
 header {
 	display: flex;
-	height: 10vh;
+	height: 15vh;
 	width: 100%;
+	min-width: 400px;
 	background-color: gray;
-	justify-content: center;
 	align-items: center;
+	justify-content: space-between;
+}
+
+header * {
+	display: flex;
+	color: #000;
+	font-size: 3vh;
+	margin: 8px;
+	text-decoration: none;
+}
+
+
+.topBarButtons > a {
+	flex-direction: column;
+	text-align: center;
 }
 
 .nav {
@@ -23,7 +39,6 @@ header {
 	top: 0;
 	left: 0;
 	background-color: #111;
-	opacity: .9;
 	overflow-x: hidden;
 	padding-top: 60px;
 	transition: 0.7s;
@@ -50,35 +65,62 @@ header {
 	font-size: 30px
 }
 
-header > * {
-	color: #000;
-	font-size: 36px;
-	margin: 8px;
-}
-
-header > #hamburgerMenu {
-	position: absolute;
-	left: 8px;
-}
-
-header > #signOut {
-	position: absolute;
-	right: 2vw;
-}
-
-header > #user {
-	position: absolute;
-	right: 10vw;
-}
-
-header > #image {
-	width: 12vw;
-	height: 12vh;
+img {
+	max-width:100%;
+	max-height:100%;
 }
 
 #content {
+	display: flex;
 	margin: 8px;
-	transition: margin-left 0.7s;
 	overflow: hidden;
 	width: 100%;
+	justify-content: center;
+	align-content: center;
+}
+
+.card-container {
+	background-color: #03bfcb;
+	border-radius: 5px;
+	box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
+	padding-top: 30px;
+	position: relative;
+	width: 350px;
+	max-width: 100%;
+	text-align: center;
+}
+
+.card-container .round {
+	border: 2px dashed red;
+	border-radius: 50%;
+	padding: 7px;
+}
+
+.skills {
+	background-color: #03bfcb;
+	text-align: left;
+	padding: 15px;
+}
+
+.skills ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+.skills ul li {
+	border: 1px solid #2d2747;
+	border-radius: 2px;
+	display: inline-block;
+	font-size: 12px;
+	margin: 0 7px 7px 0;
+	padding: 7px;
+}
+
+#hamburgerMenu {
+	margin-right: 150px;
+}
+
+.skills h6 {
+	margin-top: 8px;
 }
