--- a/css/login.css
+++ b/css/login.css
@@ -24,6 +24,7 @@ section {
 }
 
 section > input {
+    width: 50%;
     display: block;
     text-align: center;
     font-family: 'Poiret One', cursive;;
@@ -39,6 +40,7 @@ section > input {
 }
 
 div > input{
+    width: 50%;
     display:block;
     text-align: center;
     font-family: 'Poiret One', cursive;
@@ -58,6 +60,7 @@ div > input{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 50vw;
 }
 
 .image {
@@ -69,6 +72,7 @@ div > input{
  }
 
  .submit {
+    width: 50%;
     display:block;
     text-align: center;
     font-family: 'Poiret One', cursive;
