--- a/css/login.css
+++ b/css/login.css
@@ -40,6 +40,7 @@ section > input {
     border: 1px solid #000000;
     border-radius: 30px;
     cursor: pointer;
+    box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 div > input{
@@ -56,6 +57,7 @@ div > input{
     border: 1px solid #000000;
     border-radius: 30px;
     cursor: pointer;
+    box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .container {
@@ -84,6 +86,7 @@ div > input{
     border: 1px solid #000000;
     border-radius: 30px;
     cursor: pointer;
+    box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
  }
 
 
@@ -104,6 +107,7 @@ div > input{
     border: 1px solid #000000;
     border-radius: 30px;
     cursor: pointer;
+    box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
  .hide {
