--- a/css/login.css
+++ b/css/login.css
@@ -110,6 +110,10 @@ div > input{
     box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.inside:hover {
+    background-color: #fff;
+}
+
  .hide {
      display: none;
      z-index: -1;
