--- a/css/login.css
+++ b/css/login.css
@@ -10,27 +10,29 @@ body {
     height: 100vh;
     overflow: hidden;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 section {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    /* justify-content: space-around; */
     align-items: center;
-    position: absolute;
+    /* position: absolute; */
     width: 50vw;
-    height: 80vh;
+    /* height: 80vh; */
     top: 10vh;
     left: 40vw;
 }
 
 section > input {
+    margin: 0.5em 0;
     width: 50%;
     display: block;
     text-align: center;
-    font-family: 'Poiret One', cursive;;
+    font-family: 'Poiret One', cursive;
     font-style: normal;
     font-weight: normal;
     font-size: 2em;
@@ -62,17 +64,19 @@ div > input{
 
 .container {
     width: 50vw;
-    position: relative;
+    /* position: relative; */
     margin-left: 50%;
+    /* display: none; */
 }
 
 .image {
     width: 20vw;
     height: 40vh;
     margin-left: 10%;
- }
+}
 
- .submit {
+.submit {
+    margin: 1em 0;
     width: 50%;
     display:block;
     text-align: center;
@@ -87,15 +91,16 @@ div > input{
     border-radius: 30px;
     cursor: pointer;
     box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
- }
+}
 
 
 .inside {
-    position: absolute;
-    top:0;
-    left:0;
+    margin: 0.5em 0;
+    /* position: absolute; */
+    /* top:0; */
+    /* left:0; */
     width: 50%;
-    display:block;
+    /* display:block; */
     text-align: center;
     font-family: 'Poiret One', cursive;
     font-style: normal;
@@ -114,8 +119,11 @@ div > input{
     background-color: #fff;
 }
 
- .hide {
-     display: none;
-     z-index: -1;
- }
+.hide {
+    display: none;
+    z-index: -1;
+}
 
+input[name='confirm password'] {
+    display: none;
+}
