--- a/css/mentor.css
+++ b/css/mentor.css
@@ -7,6 +7,8 @@ body {
     overflow-x: hidden;
     margin: 0;
     padding: 0;
+    background-color: #efefef;
+
 }
 
 header {
@@ -72,13 +74,18 @@ img {
     max-height:100%;
 }
 
+#image{
+    width: 12vw;
+    height: 20vh;
+}
+
 #content {
     display: flex;
     flex-direction: column;
+    justify-content: flex-end;
     overflow: hidden;
     width: 100%;
-    justify-content: center;
-    align-content: center;
+
 }
 
 .card-container {
@@ -129,10 +136,11 @@ img {
 
 .students {
     display: flex;
+    width: 100%;
     height: 8vh;
     justify-content: space-around;
     align-items: center;
-    background-color: blue;
+    background-image: linear-gradient( gray, #efefef);
 
 
 }
@@ -150,15 +158,17 @@ img {
 
 
 .wholeSearch{
+    margin-left: 15vw;
     display: flex;
     flex-direction: row;
+    align-items: center;
     height: 100%;
 }
 
 .search {
     margin: 0.5em 0;
     height: 80%;
-    width: 50%;
+    width: 20vw;
     display: block;
     text-align: center;
     font-family: 'Poiret One', cursive;
@@ -175,14 +185,80 @@ img {
 }
 
 .button{
-    margin: 1em 0;
+    /*margin: 1em 0;*/
     height: 80%;
-    width: 20vw;
+    width: 6vw;
     display:block;
     text-align: center;
     font-family: 'Poiret One', cursive;
     font-style: normal;
     font-weight: bold;
+    font-size: 1em;
+    line-height: 1em;
+    letter-spacing: 0.2em;
+    color: #616161;
+    border: 1px solid #000000;
+    border-radius: 30px;
+    cursor: pointer;
+    box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.button:hover{
+    background-color: #cdcdcd;
+}
+
+.listOfStudents {
+    display: flex;
+    flex-direction: column;
+    margin-left: 9.5em;
+    margin-right: 2px;
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.singleStudent{
+    margin-top: 2px;
+    margin-bottom: 1px;
+    border: black solid 1px;
+    border-radius: 30px;
+    color: #616161;
+    cursor: pointer;
+    background-color: lightgray;
+
+}
+
+.singleStudent:hover{
+    background-color: #cdcdcd;
+}
+
+.studentText {
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+.formula{
+    width: 40vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.belowContent{
+    display: flex;
+    flex-direction: row;
+
+}
+
+.update {
+    margin: 0.5em 0;
+    height: 10%;
+    width: 20vw;
+    display: block;
+    text-align: center;
+    font-family: 'Poiret One', cursive;
+    font-style: normal;
+    font-weight: normal;
     font-size: 1em;
     line-height: 2.5em;
     letter-spacing: 0.2em;
