--- a/css/creep.css
+++ b/css/creep.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #bdbbbb73;
+}
+
 h3 {
     text-align: center;
 }
@@ -13,7 +17,7 @@ td {
   }
   
 td, th {
-    border: 1px solid #ddd;
+    border: 1px solid rgb(196, 195, 195);
     padding: 8px;
     text-align: center;
   }
