changed section to form

--- a/Public/css/login.css
+++ b/Public/css/login.css
@@ -15,7 +15,7 @@ body {
     align-items: center;
 }
 
-section {
+form {
     display: flex;
     flex-direction: column;
     /* justify-content: space-around; */
