--- a/Public/css/login.css
+++ b/Public/css/login.css
@@ -27,10 +27,10 @@ form {
     left: 40vw;
 }
 
-section > input {
+section > input, div > input, .submit{
     margin: 0.5em 0;
-    width: 50%;
     display: block;
+    width: 50%;
     text-align: center;
     font-family: 'Poiret One', cursive;
     font-style: normal;
@@ -45,9 +45,18 @@ section > input {
     box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+section > input {
+
+}
+
+div > input {
+
+}
+.submit {
+
+}
+
 div > input{
-    width: 50%;
-    display:block;
     text-align: center;
     font-family: 'Poiret One', cursive;
     font-style: normal;
@@ -76,9 +85,6 @@ div > input{
 }
 
 .submit {
-    margin: 1em 0;
-    width: 50%;
-    display:block;
     text-align: center;
     font-family: 'Poiret One', cursive;
     font-style: normal;
