--- a/Public/css/quests.css
+++ b/Public/css/quests.css
@@ -17,7 +17,9 @@
     flex-wrap: wrap;
 }
 
-.artifact-card {
+.quest-card {
+    position:relative;
+    display:inline-block;
     flex-direction: column;
     background-color: #03bfcb;
     align-items: center;
@@ -27,18 +29,23 @@
     padding: 1vw;
 }
 
+.quest-card:hover {
+    box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
+}
+
 .description{
     font-size: 80%;
 }
 
-.artifact-card > h2 {
+.quest-card > h2 {
     text-align: center;
     color: white;
 }
 
-.artifact-card > img {
+.quest-card > img {
     border-radius: 10px;
 }
+
 
 
 
