--- a/Public/css/login.css
+++ b/Public/css/login.css
@@ -15,22 +15,19 @@ body {
     align-items: center;
 }
 
-form {
+section {
     display: flex;
     flex-direction: column;
-    /* justify-content: space-around; */
     align-items: center;
-    /* position: absolute; */
     width: 50vw;
-    /* height: 80vh; */
     top: 10vh;
     left: 40vw;
 }
 
-section > input, div > input, .submit{
+section > input {
     margin: 0.5em 0;
-    display: block;
     width: 50%;
+    display: block;
     text-align: center;
     font-family: 'Poiret One', cursive;
     font-style: normal;
@@ -45,18 +42,9 @@ section > input, div > input, .submit{
     box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-section > input {
-
-}
-
-div > input {
-
-}
-.submit {
-
-}
-
 div > input{
+    width: 50%;
+    display:block;
     text-align: center;
     font-family: 'Poiret One', cursive;
     font-style: normal;
@@ -73,9 +61,7 @@ div > input{
 
 .container {
     width: 50vw;
-    /* position: relative; */
     margin-left: 50%;
-    /* display: none; */
 }
 
 .image {
@@ -85,6 +71,9 @@ div > input{
 }
 
 .submit {
+    margin: 1em 0;
+    width: 50%;
+    display:block;
     text-align: center;
     font-family: 'Poiret One', cursive;
     font-style: normal;
@@ -102,11 +91,7 @@ div > input{
 
 .inside {
     margin: 0.5em 0;
-    /* position: absolute; */
-    /* top:0; */
-    /* left:0; */
     width: 50%;
-    /* display:block; */
     text-align: center;
     font-family: 'Poiret One', cursive;
     font-style: normal;
