--- a/Public/css/creep.css
+++ b/Public/css/creep.css
@@ -18,7 +18,7 @@ td {
   
 td, th {
     border: 1px solid rgb(196, 195, 195);
-    padding: 8px;
+    padding: 0.5em;
     text-align: center;
   }
   
@@ -27,8 +27,8 @@ tr:nth-child(even){background-color: #f2f2f2;}
 tr:hover {background-color: #ddd;}
   
 th {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 0.8em;
+    padding-bottom: 0.8em;
     text-align: center;
     background-color: #f2f2f2;
 }
@@ -44,14 +44,14 @@ button {
     background-color: rgb(255, 0, 0);
     border: none;
     border-radius: 15px;
-    box-shadow: 0 5px #999;
+    box-shadow: 0 0.4em #999;
 }
   
 button:hover {background-color: #bb0000}
   
 button:active {
     background-color: #7e0000;
-    box-shadow: 0 5px #666;
+    box-shadow: 0 0.4em #666;
     transform: translateY(4px);
 }
 
@@ -67,14 +67,14 @@ button:active {
     background-color: rgb(0, 145, 19);
     border: none;
     border-radius: 15px;
-    box-shadow: 0 5px #999;
+    box-shadow: 0 0.3em #999;
 }
   
 #add:hover {background-color: #008337}
   
 #add:active {
     background-color: #005e2f;
-    box-shadow: 0 5px #666;
+    box-shadow: 0 0.4em #666;
     transform: translateY(4px);
 }
 
