refactoreg margins on buttons

--- a/Public/css/login.css
+++ b/Public/css/login.css
@@ -24,7 +24,7 @@ section {
     left: 40vw;
 }
 
-section > input, div > input, .submit {
+section > input, div > input, .submit, .inside {
 width: 50%;
 display: block;
 text-align: center;
@@ -41,7 +41,7 @@ cursor: pointer;
 box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-section > input {
+section > input, .inside {
     margin: 0.5em 0;
 }
 
@@ -56,25 +56,8 @@ section > input {
     margin-left: 10%;
 }
 
-.submit {
+.submit, .container > button, input {
     margin: 1em 0;
-}
-
-.inside {
-    margin: 0.5em 0;
-    width: 50%;
-    text-align: center;
-    font-family: 'Poiret One', cursive;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 2em;
-    line-height: 2.5em;
-    letter-spacing: 0.2em;
-    color: #616161;
-    border: 1px solid #000000;
-    border-radius: 30px;
-    cursor: pointer;
-    box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .inside:hover {
