--- a/Public/css/mentor.css
+++ b/Public/css/mentor.css
@@ -7,8 +7,6 @@ body {
     overflow-x: hidden;
     margin: 0;
     padding: 0;
-    background-color: #efefef;
-
 }
 
 header {
@@ -29,6 +27,10 @@ header * {
     text-decoration: none;
 }
 
+img {
+    max-width:100%;
+    max-height:100%;
+}
 
 .topBarButtons > a {
     flex-direction: column;
@@ -36,6 +38,7 @@ header * {
 }
 
 .nav {
+    flex-direction: column;
     height: 100%;
     width: 0;
     position: fixed;
@@ -69,72 +72,39 @@ header * {
     font-size: 30px
 }
 
-img {
-    max-width:100%;
-    max-height:100%;
-}
-
-#image{
-    width: 12vw;
-    height: 20vh;
-}
-
-#content {
+.content {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
+    align-content: center;
     overflow: hidden;
     width: 100%;
-
-}
-
-.card-container {
-    background-color: #03bfcb;
-    border-radius: 5px;
-    box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
-    padding-top: 30px;
-    position: relative;
-    width: 350px;
-    max-width: 100%;
-    text-align: center;
-}
-
-.card-container .round {
-    border: 2px dashed red;
-    border-radius: 50%;
-    padding: 7px;
-}
-
-.skills {
-    background-color: #03bfcb;
-    text-align: left;
-    padding: 15px;
-}
-
-.skills ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.skills ul li {
-    border: 1px solid #2d2747;
-    border-radius: 2px;
-    display: inline-block;
-    font-size: 12px;
-    margin: 0 7px 7px 0;
-    padding: 7px;
+    justify-content: center;
+    align-content: center;
+    background-color: #efefef;
 }
 
 #hamburgerMenu {
-    margin-right: 150px;
+    margin: 0 75px;
 }
 
-.skills h6 {
-    margin-top: 8px;
+.topBarButtons > *{
+    transition: all .2s ease-in-out  ;
+}
+.topBarButtons > *:hover{
+    transform: scale(1.1);
 }
 
-.students {
+#hamburgerMenu {
+    transition: all .2s ease-in-out  ;
+}
+#hamburgerMenu:hover{
+    transform: scale(1.1);
+}
+
+
+
+.topSearchBar {
     display: flex;
     width: 100%;
     height: 8vh;
@@ -142,12 +112,6 @@ img {
     align-items: center;
     background-image: linear-gradient( gray, #efefef);
 
-
-}
-
-.store {
-    background-color: blueviolet;
-    display: none;
 
 }
 
@@ -207,47 +171,12 @@ img {
     background-color: #cdcdcd;
 }
 
-.listOfStudents {
-    display: flex;
-    flex-direction: column;
-    margin-left: 9.5em;
-    margin-right: 2px;
-    font-size: 2em;
-    font-weight: bold;
-}
-
-.singleStudent{
-    margin-top: 2px;
-    margin-bottom: 1px;
-    border: black solid 1px;
-    border-radius: 30px;
-    color: #616161;
-    cursor: pointer;
-    background-color: lightgray;
-
-}
-
-.singleStudent:hover{
-    background-color: #cdcdcd;
-}
-
-.studentText {
-    margin-left: 1em;
-    margin-right: 1em;
-}
-
-.formula{
-    width: 40vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-}
 
 .belowContent{
     display: flex;
+    justify-content: center;
     flex-direction: row;
-
+    margin-left: 256px;
 }
 
 .update {
