--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -27,11 +27,6 @@ header * {
 	text-decoration: none;
 }
 
-img {
-	max-width:100%;
-	max-height:100%;
-}
-
 .topBarButtons > a {
 	flex-direction: column;
 	text-align: center;
@@ -83,8 +78,9 @@ img {
 	align-content: center;
 }
 
-#hamburgerMenu {
-	margin: 0 4em;
+img {
+	max-width: 100%;
+	max-height: 100%;
 }
 
 .topBarButtons > *{
@@ -96,9 +92,15 @@ img {
 
 #hamburgerMenu {
 	transition: all .2s ease-in-out  ;
+	margin-right: 220px;
 }
 #hamburgerMenu:hover{
 	transform: scale(1.1);
 }
 
+.welcome-screen {
+	font-size: 500%;
+	opacity: 20%;
+	color: #03bfcb;
+}
 
