--- a/Public/css/login.css
+++ b/Public/css/login.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-body {
+.container {
     background-image: linear-gradient(#9d9d9d, #ffffff);
     font-family: arial, helvetica, sans-serif;
     width: 100vw;
@@ -15,16 +15,16 @@ body {
     align-items: center;
 }
 
-section {
+
+
+form {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 50vw;
-    top: 10vh;
-    left: 40vw;
 }
 
-section > input, div > input, .submit, .inside {
+form > input, div > input, .submit, .inside {
 width: 50%;
 display: block;
 text-align: center;
@@ -36,22 +36,22 @@ line-height: 2.5em;
 letter-spacing: 0.2em;
 color: #616161;
 border: 1px solid #000000;
-border-radius: 30px;
+border-radius: 2em;
 cursor: pointer;
 box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-section > input, .inside {
+form > input, .inside {
     margin: 0.5em 0;
 }
 
-.container {
+/*.container {
     width: 50vw;
     margin-left: 50%;
-}
+}*/
 
 .image {
-    width: 20vw;
+    width: 40vh;
     height: 40vh;
     margin-left: 10%;
 }
@@ -69,6 +69,26 @@ section > input, .inside {
     z-index: -1;
 }
 
-input[name='confirm password'] {
+input[name='confirm_password'] {
     display: none;
+}
+
+@media screen and (max-width: 740px){
+    form > input, div > input, .submit, .inside {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 480px){
+    .container {
+        flex-direction: column;
+    }
+
+    form {
+        width: 100vw;
+    }
+
+    form > input, div > input, .submit, .inside {
+        width: 80%;
+    }
 }
