--- a/Public/css/login.css
+++ b/Public/css/login.css
@@ -45,14 +45,9 @@ form > input, .inside {
     margin: 0.5em 0;
 }
 
-/*.container {
-    width: 50vw;
-    margin-left: 50%;
-}*/
-
 .image {
-    width: 40vh;
-    height: 40vh;
+    width: 45vh;
+    height: 30vh;
     margin-left: 10%;
 }
 
@@ -66,7 +61,7 @@ form > input, .inside {
 
 .hide {
     display: none;
-    z-index: -1;
+   /* z-index: -1;*/
 }
 
 input[name='confirm_password'] {
