--- a/back-end/src/Public/css/creep.css
+++ b/back-end/src/Public/css/creep.css
@@ -24,7 +24,7 @@ td, th {
   
 tr:nth-child(even){background-color: #f2f2f2;}
   
-tr:hover {background-color: #ddd;}
+/*tr:hover {background-color: #ddd;}*/
   
 th {
     padding-top: 0.8em;
@@ -105,9 +105,9 @@ h1 {
 	box-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.bars a:hover {
-    background-color: #eee;
-  }
+/*.bars a:hover {*/
+/*    background-color: #eeeeee;*/
+/*  }*/
 
 .button{
     align-self: flex-end;
@@ -128,3 +128,61 @@ h1 {
 .button:hover {
     background-color: #eee;
   }
+
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    /*-webkit-user-select: none;*/
+    /*-moz-user-select: none;*/
+    /*-ms-user-select: none;*/
+    /*user-select: none;*/
+}
+
+
+
+/* The actual popup */
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+/*.popup .popuptext :hover{*/
+/*    background-color: #555;*/
+/*}*/
+
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 0.5s;
+    animation: fadeIn 0.5s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+}
+
+.editCells{
+    display: flex;
+    flex-direction: column;
+}
+
+.editCells:hover{
+    background-color: darkred;
+}
