--- a/back-end/src/Public/css/user-view.css
+++ b/back-end/src/Public/css/user-view.css
@@ -1,5 +1,5 @@
-
 .card-container {
+
     background-color: #03bfcb;
     border-radius: 5px;
     box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
@@ -10,34 +10,7 @@
     text-align: center;
 }
 
-.card-container .round {
-    border: 2px dashed red;
-    border-radius: 50%;
-    padding: 7px;
-}
-
-.skills {
-    border-radius: 5px;
-    background-color: #03bfcb;
-    text-align: left;
-    padding: 15px;
-}
-
-.skills ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.skills ul li {
-    border: 1px solid #2d2747;
-    border-radius: 2px;
-    display: inline-block;
-    font-size: 12px;
-    margin: 0 7px 7px 0;
-    padding: 7px;
-}
-
-.skills h6 {
-    margin-top: 8px;
+.card-container .picture {
+    height: 40%;
+      width: 50%;
 }
